# cpp-starter-template

./: .gitignore  README.md
src/: some.cpp  some.h
test/: CMakeLists.txt
test/fixtures/: things.cpp  things.h
test/src/: some_test.cpp  test_runner.cpp
