#
# PROJECT, LIBRARY AND BINARY NAMES
#

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(change_my_name_unit_tests)
SET(EXECUTABLE_NAME change_my_name_tests)
SET(LIBRARY_NAME change_my_name)

#
# SPECIFY YOUR GMOCK AND GTEST PATH
#

# Set environment GTEST_PATH=../../
IF (DEFINED ENV{GTEST_PATH})
  SET(GTEST_PATH ENV{GTEST_PATH})
ELSE()
  SET(GTEST_PATH ../../gmock-1.7.0/gtest)
ENDIF (DEFINED ENV{GTEST_PATH})

# Set environment GMOCK_PATH=../../
IF (DEFINED ENV{GMOCK_PATH})
  SET(GMOCK_PATH ENV{GMOCK_PATH})
ELSE()
  SET(GMOCK_PATH ../../gmock-1.7.0)
ENDIF (DEFINED ENV{GMOCK_PATH})

#
# COMPILER CONFIGURATION
#

# Use C++ 11
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -v")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -v")

# To use DEBUG
IF (DEFINED ENV{DEBUG})
  SET(CMAKE_BUILD_TYPE Debug)
ENDIF (DEFINED ENV{DEBUG})

IF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  # Mac OS X specific code
  MESSAGE(STATUS "Compliling for Darwin")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
  MESSAGE(STATUS "Compliling for Darwin")
ENDIF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

IF (MSVC)
  # Force to always compile with W4
  IF(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
    STRING(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  ELSE()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
  ENDIF()
ELSEIF (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
  # Update if necessary
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic")
ENDIF (MSVC)

IF (DEFINED ENV{GTEST_USE_OWN_TR1_TUPLE})
  ADD_DEFINITIONS( -DGTEST_USE_OWN_TR1_TUPLE=1 )
ENDIF (DEFINED ENV{GTEST_USE_OWN_TR1_TUPLE})

ADD_DEFINITIONS( -DGTEST_LANG_CXX11=1 )

MESSAGE(STATUS ${CMAKE_CXX_FLAGS})

#
# INCLUDE DIRECTORIES
#

INCLUDE_DIRECTORIES(../src)
INCLUDE_DIRECTORIES(./fixtures)
INCLUDE_DIRECTORIES("${GTEST_PATH}/include")
INCLUDE_DIRECTORIES("${GMOCK_PATH}/include")

#
# SOURCE CODE AND TEST SOURCE CODE
#

FILE(
  GLOB_RECURSE
  SRC_FILES
  ../src/*
  )

FILE(
  GLOB_RECURSE
  TEST_SRC_FILES
  fixtures/*
  src/*
  )

#
# GMOCK AND OTHER DEPENDENCIES
#

FIND_LIBRARY(
  GTEST_LIBS
  NAMES
  gtest
  HINTS ${GTEST_PATH} "${GTEST_PATH}/lib" "${GTEST_PATH}/lib/.libs"
  )

FIND_LIBRARY(
  GTEST_MAIN_LIBS
  NAMES
  gtest_main
  HINTS ${GTEST_PATH} "${GTEST_PATH}/lib" "${GTEST_PATH}/lib/.libs"
  )

FIND_LIBRARY(
  GMOCK_LIBS
  NAMES
  gmock
  HINTS ${GMOCK_PATH} "${GMOCK_PATH}/lib" "${GMOCK_PATH}/lib/.libs"
  )

FIND_LIBRARY(
  GMOCK_MAIN_LIBS
  NAMES
  gmock_main
  HINTS ${GMOCK_PATH} "${GMOCK_PATH}/lib" "${GMOCK_PATH}/lib/.libs"
  )

IF (UNIX)
  FIND_LIBRARY(
    DL
    NAMES
    dl
    )
ENDIF (UNIX)

FIND_LIBRARY(
  PTHREAD
  NAMES
  pthread
  )

IF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  FIND_LIBRARY(
    LIBC++
    NAMES
    stdc++
    )
ENDIF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

FILE(
  GLOB_RECURSE
  GTEST_INCLUDE_FILES
  ${GTEST_PATH}/include/*
  )

#
# CREATE LIBRARY
#

ADD_LIBRARY(
  ${LIBRARY_NAME}
  ${SRC_FILES}
  )

#
# CREATE EXECUTABLE
#

ADD_EXECUTABLE(
  ${EXECUTABLE_NAME}
  ${TEST_SRC_FILES}
  )

#
# LINK LIBRARIES AND EXECUTABLE
#

TARGET_LINK_LIBRARIES(
  ${EXECUTABLE_NAME}
  ${LIBRARY_NAME}
  ${GTEST_LIBS}
  ${GTEST_MAIN_LIBS}
  ${GMOCK_LIBS}
  ${GMOCK_MAIN_LIBS}
  ${DL}
  ${LIBC++}
  ${PTHREAD}
  )
